--- a/User Card/style.css
+++ b/User Card/style.css
@@ -27,6 +27,7 @@ h1 {
     display: flex;
     gap: 10px;
     align-items: center;
+    margin: 10px 0;
 }
 
 .small {
@@ -36,4 +37,21 @@ h1 {
 
 .content {
     margin-left: 20px;
+}
+
+.flex > h3 {
+    margin: 0;
+}
+
+p {
+    margin: 0;
+}
+
+.bottom {
+    margin-top: 20px;
+}
+
+.align-middle {
+    vertical-align: middle;
+    font-weight: bold;
 }
